force-app/main/default/objects/Lead/fields/Add_to_Call_Block__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Call_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will add this Lead to the Call Block Report</description>
    <inlineHelpText>Checking this box will add this Lead to the Call Block Report</inlineHelpText>
    <label>Add to Call Block</label>
    <type>Checkbox</type>
</CustomField>