force-app/main/default/objects/Lead/fields/Competitor_Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Expiry_Date__c</fullName>
    <label>Competitor Contract Expiry Date</label>
    <type>Date</type>
</CustomField>