force-app/main/default/objects/Lead/fields/Corporate_Services__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Services__c</fullName>
    <label>Corporate Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Internet</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Server Colocation</fullName>
            </value>
            <value>
                <fullName>Private Storage</fullName>
            </value>
            <value>
                <fullName>Backup and disaster recovery</fullName>
            </value>
            <value>
                <fullName>MyExchange</fullName>
            </value>
            <value>
                <fullName>Hostpath</fullName>
            </value>
            <value>
                <fullName>Business Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>