force-app/main/default/objects/Lead/fields/duns_nmbr__c.field-meta.xml
<CustomField>
    <fullName>duns_nmbr__c</fullName>
    <description>DNB Duns Number</description>
    <label>DUNS Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>