force-app/main/default/objects/Lead/fields/Employee_Title__c.field-meta.xml
<CustomField>
    <fullName>Employee_Title__c</fullName>
    <label>Employee Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Title</valueSetName>
    </valueSet>
</CustomField>