force-app/main/default/objects/Lead/fields/From_Web__c.field-meta.xml
<CustomField>
    <fullName>From_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Lead from web integration like Web-to-Lead or Pardot Landing pages?</description>
    <label>From Web?</label>
    <type>Checkbox</type>
</CustomField>