force-app/main/default/objects/Lead/fields/FSA_Lead_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FSA_Lead_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger the postal code lead assignment to a sales person</description>
    <inlineHelpText>Used to trigger the postal code lead assignment to a sales person</inlineHelpText>
    <label>FSA Lead Assignment</label>
    <type>Checkbox</type>
</CustomField>