force-app/main/default/objects/Lead/fields/Industry_Code_Accpac__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Accpac__c</fullName>
    <label>Industry Code For Accpac</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>000-00 UNKNOWN</fullName>
            </value>
            <value>
                <fullName>100-01 PROPERTY MANAGEMENT-Owner Managed - Office</fullName>
            </value>
            <value>
                <fullName>100-02 PROPERTY MANAGEMENT-Owner Managed - Retail</fullName>
            </value>
            <value>
                <fullName>100-03 PROPERTY MANAGEMENT-Owner Managed - Industrial</fullName>
            </value>
            <value>
                <fullName>100-04 PROPERTY MANAGEMENT-Owner Managed - Banks</fullName>
            </value>
            <value>
                <fullName>100-05 PROPERTY MANAGEMENT-Owner Managed - Residential</fullName>
            </value>
            <value>
                <fullName>100-21 PROPERTY MANAGEMENT-Third Party Managed - Office</fullName>
            </value>
            <value>
                <fullName>100-22 PROPERTY MANAGEMENT-Third Party Managed - Retail</fullName>
            </value>
            <value>
                <fullName>100-23 PROPERTY MANAGEMENT-Third Party Managed - Industrial</fullName>
            </value>
            <value>
                <fullName>100-24 PROPERTY MANAGEMENT-Third Party Managed - Banks</fullName>
            </value>
            <value>
                <fullName>100-25 PROPERTY MANAGEMENT-Third Party Managed - Residential</fullName>
            </value>
            <value>
                <fullName>200-01 HOSPITALITY-Convention Centres</fullName>
            </value>
            <value>
                <fullName>200-02 HOSPITALITY-Fitness Clubs</fullName>
            </value>
            <value>
                <fullName>200-03 HOSPITALITY-Golf&apos;s Club</fullName>
            </value>
            <value>
                <fullName>200-04 HOSPITALITY-Hotels, Motels</fullName>
            </value>
            <value>
                <fullName>200-05 HOSPITALITY-Independent Restaurants</fullName>
            </value>
            <value>
                <fullName>200-06 HOSPITALITY-Multi-chain Restaurants</fullName>
            </value>
            <value>
                <fullName>200-07 HOSPITALITY-Private Athletic Clubs</fullName>
            </value>
            <value>
                <fullName>200-08 HOSPITALITY-Ski Resorts</fullName>
            </value>
            <value>
                <fullName>200-09 HOSPITALITY-Sports Centers</fullName>
            </value>
            <value>
                <fullName>200-10 HOSPITALITY-Entertainment</fullName>
            </value>
            <value>
                <fullName>300-01 MANUFACTURING-Automotive</fullName>
            </value>
            <value>
                <fullName>300-02 MANUFACTURING-Food</fullName>
            </value>
            <value>
                <fullName>300-03 MANUFACTURING-Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>300-04 MANUFACTURING-Textiles</fullName>
            </value>
            <value>
                <fullName>300-05 MANUFACTURING-Others</fullName>
            </value>
            <value>
                <fullName>400-01 GOVERNMENT-Municipal</fullName>
            </value>
            <value>
                <fullName>400-02 GOVERNMENT-Provincial</fullName>
            </value>
            <value>
                <fullName>400-03 GOVERNMENT-Federal</fullName>
            </value>
            <value>
                <fullName>500-01 HEALTH CARE-Hospitals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>