force-app/main/default/objects/Lead/fields/Lead_ID_Casesafe__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_Casesafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Lead ID (Casesafe)</label>
    <type>Text</type>
</CustomField>