force-app/main/default/objects/Lead/fields/Lead_Source_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Additional_Info__c</fullName>
    <inlineHelpText>Additional information relating to the lead source</inlineHelpText>
    <label>Lead Source Additional Info</label>
    <type>TextArea</type>
</CustomField>