force-app/main/default/objects/Lead/fields/Lead_Source_Selected__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Selected__c</fullName>
    <description>The lead source value to map to custom lead source field in Account</description>
    <formula>TEXT( LeadSource )</formula>
    <label>Lead Source Selected</label>
    <type>Text</type>
</CustomField>