force-app/main/default/objects/Lead/fields/Lead_Source_Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Technician_Name__c</fullName>
    <label>Lead Source Technician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>