force-app/main/default/objects/Lead/fields/Level_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Contact__c</fullName>
    <label>Level of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Gate Keeper</fullName>
            </value>
            <value>
                <fullName>Purchasing Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>