force-app/main/default/objects/Lead/fields/Market_Data_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Data_Industry_Code__c</fullName>
    <label>Market Data Industry Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>