force-app/main/default/objects/Lead/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <description>When True = filters reports to display record owned by your subordinates</description>
    <formula>OR( $User.Id = Owner:User.Manager.Id, $User.Id = Owner:User.Manager.Manager.Id,$User.Id = Owner:User.Manager.Manager.Manager.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>