force-app/main/default/objects/Lead/fields/pi__campaign__c.field-meta.xml
<CustomField>
    <fullName>pi__campaign__c</fullName>
    <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
    <label>Pardot Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>