force-app/main/default/objects/Lead/fields/Product_Service_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Interest__c</fullName>
    <inlineHelpText>Use this field to briefly outline the customers interest</inlineHelpText>
    <label>Product/Service Interest</label>
    <type>TextArea</type>
</CustomField>