force-app/main/default/objects/Lead/fields/ringdna100__Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Call_Attempts__c</fullName>
    <label>Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>