force-app/main/default/objects/Lead/fields/ringdna100__First_Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__First_Outbound_Message__c</fullName>
    <label>First Outbound Message</label>
    <type>DateTime</type>
</CustomField>