force-app/main/default/objects/Lead/fields/ringdna100__Last_Email_Attempt__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Last_Email_Attempt__c</fullName>
    <label>Last Email Attempt</label>
    <type>DateTime</type>
</CustomField>