force-app/main/default/objects/Lead/fields/ringdna100__Last_Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Last_Outbound_Message__c</fullName>
    <label>Last Outbound Message</label>
    <type>DateTime</type>
</CustomField>