force-app/main/default/objects/Lead/fields/ringdna100__Response_Type__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>