force-app/main/default/objects/Lead/fields/ringdna100__Time_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Time_to_Respond__c</fullName>
    <label>Time to First Response (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>