force-app/main/default/objects/Lead/fields/ringdna107__Cadence_Day__c.field-meta.xml
<CustomField>
    <fullName>ringdna107__Cadence_Day__c</fullName>
    <label>Cadence Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>