force-app/main/default/objects/Lead/fields/ringdna107__Days_Since_Lead_Creation__c.field-meta.xml
<CustomField>
    <fullName>ringdna107__Days_Since_Lead_Creation__c</fullName>
    <label>Days Since Lead Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>