force-app/main/default/objects/Lead/fields/ringdna107__Priority__c.field-meta.xml
<CustomField>
    <fullName>ringdna107__Priority__c</fullName>
    <description>RingDNA: Added to support the RingDNA Priority UI</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>