force-app/main/default/objects/Lead/fields/ringdna107__RingDNA_WebLead__c.field-meta.xml
<CustomField>
    <fullName>ringdna107__RingDNA_WebLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify whether it is ringdna webleads</description>
    <label>RingDNA WebLead</label>
    <type>Checkbox</type>
</CustomField>