force-app/main/default/objects/Lead/fields/ringdna107__Voicemail_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ringdna107__Voicemail_Attempts__c</fullName>
    <label>Voicemail Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>