force-app/main/default/objects/Lead/fields/SE_Create_Walk_in_Event__c.field-meta.xml
<CustomField>
    <fullName>SE_Create_Walk_in_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://trello.com/c/GqFHK76l/410-create-activity-option-when-using-click2create-on-salesforce-maps  ( this is a temporary field and will be removed once the interaction is implemented.</description>
    <label>Create Walk in Event</label>
    <type>Checkbox</type>
</CustomField>