force-app/main/default/objects/Lead/fields/Unit_Test_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Sentiment_Score__c</fullName>
    <description>Do not delete. This field is used in Sentiment unit tests.</description>
    <label>Unit Test Sentiment Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>