force-app/main/default/objects/Lead/validationRules/Competitors_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitors_Required</fullName>
    <active>false</active>
    <description>Competitors field requires a value if the Lead Type is &apos;Programmer&apos;</description>
    <errorConditionFormula>AND(ISPICKVAL( Lead_Type__c , &quot;Programmer&quot;) ,  ISPICKVAL(Competitors__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Competitors__c</errorDisplayField>
    <errorMessage>Please enter a competitor value.</errorMessage>
</ValidationRule>