force-app/main/default/objects/Lead/validationRules/Required_Competitor_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Competitor_Info</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Competitors__c , &quot;Other&quot;) &amp;&amp;  ISBLANK( Other_Competitor_Notes__c )</errorConditionFormula>
    <errorDisplayField>Other_Competitor_Notes__c</errorDisplayField>
    <errorMessage>Details of the competitor required</errorMessage>
</ValidationRule>