force-app/main/default/objects/Lead/validationRules/Street_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Street_Address</fullName>
    <active>true</active>
    <description>Site Address</description>
    <errorConditionFormula>IF($User.ID_Casesafe__c =  $CustomMetadata.Sales_Setting__mdt.Lead_Settings.Integration_Override_Validations_User_ID__c , FALSE,
  IF(  CreatedDate &lt; NOW(), ISBLANK( Street ), 
    AND(ISBLANK( Street ),  NOT(From_Web__c ))))</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>Must input address</errorMessage>
</ValidationRule>