force-app/main/default/objects/Lead/validationRules/Technician_Require_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Technician_Require_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(LeadSource, &quot;Technician&quot;) &amp;&amp;  ISBLANK(Lead_Source_Technician_Name__c)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Technician_Name__c</errorDisplayField>
    <errorMessage>If the source came from a technician, the technician name is required.</errorMessage>
</ValidationRule>