force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Add_to_Call_Block__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Lead_Source_Technician_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Tradeshow</value>
    </filters>
    <filters>
        <field>Lead_Source_Additional_Info__c</field>
        <operation>contains</operation>
        <value>Restaurant</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/5/2019 12:00 AM</value>
    </filters>
    <label>Restaurant Tradeshow</label>
</ListView>