force-app/main/default/objects/Lead/listViews/Alternate_Lead_View.listView-meta.xml
<ListView>
    <fullName>Alternate_Lead_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Source_Selected__c</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Alternate Lead View</label>
    <sharedTo>
        <group>costar_trial</group>
    </sharedTo>
</ListView>