force-app/main/default/objects/Lead/listViews/BGIS_Tender.listView-meta.xml
<ListView>
    <fullName>BGIS_Tender</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Additional_Info__c</field>
        <operation>equals</operation>
        <value>Tender - BGIS - March 2018</value>
    </filters>
    <label>BGIS Tender</label>
    <language>en_US</language>
    <sharedTo>
        <role>CEO</role>
        <role>Sales_Support</role>
    </sharedTo>
</ListView>