force-app/main/default/objects/Lead/listViews/Biochem_Leads_Priority.listView-meta.xml
<ListView>
    <fullName>Biochem_Leads_Priority</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Competitors__c</columns>
    <columns>Competitor_Contract_Expiry_Date__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Competitors__c</field>
        <operation>equals</operation>
        <value>Bio-Chem</value>
    </filters>
    <label>Biochem Leads - Priority</label>
</ListView>